<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/greyMedium" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="7.0dip">
        <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/whiteFont" android:gravity="center" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_of_service" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
            <TextView android:textSize="14.0dip" android:textColor="@color/whiteFont" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_begin" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/whiteFont" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_1_title" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/whiteFont" android:paddingTop="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_1_1" />
            <TextView android:textSize="14.0dip" android:textColor="@color/whiteFont" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_1_2" android:onClick="showPrivacyPolicy" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/whiteFont" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_2_title" />
            <TextView android:textSize="14.0dip" android:textColor="@color/whiteFont" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_2_1" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/whiteFont" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_3_title" />
            <TextView android:textSize="14.0dip" android:textColor="@color/whiteFont" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_3_1" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/whiteFont" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_4_title" />
            <TextView android:textSize="14.0dip" android:textColor="@color/whiteFont" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_4_1" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/whiteFont" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_5_title" />
            <TextView android:textSize="14.0dip" android:textColor="@color/whiteFont" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/term_5_1" />
            <TextView android:textSize="14.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/buttonBack" android:background="@drawable/button_blue_rounded" android:clickable="true" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginTop="15.0dip" android:minWidth="130.0dip" android:text="Return" android:onClick="returnBack" android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>