<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center|left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="0.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <TextView android:textSize="28.0dip" android:textColor="#ffffffff" android:gravity="left" android:id="@id/welcomeTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="10.0dip" android:text="Couple Tracker" android:lineSpacingExtra="5.0dip" android:textAllCaps="true" />
        <TextView android:textSize="15.0dip" android:textColor="#ffffffff" android:gravity="left" android:id="@id/welcomeText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:text="Check and monitor your partner's phone activity in realtime" android:lineSpacingExtra="7.0dip" />
        <TextView android:textSize="18.0dip" android:textColor="#ffffffff" android:gravity="left" android:id="@id/introText" android:paddingTop="100.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:text="Check and monitor your partner's phone activity in realtime" android:lines="10" android:lineSpacingExtra="7.0dip" />
    </LinearLayout>
    <TextView android:textColor="#ffffffff" android:id="@id/welcomeNote" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="50.0dip" android:text="text" android:layout_alignParentBottom="true" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="280.0dip" android:layout_alignParentBottom="true">
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/welcomeStartUse" android:background="@drawable/button_blue_rounded" android:padding="15.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="250.0dip" android:text="@string/welcomeStartUseCameraBlock" android:onClick="startUse" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/welcomeAgreeTosLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:layout_weight="1.0" android:layout_alignParentBottom="true">
        <ImageView android:layout_gravity="left" android:id="@id/welcomeAgreeTosImage" android:clickable="true" android:layout_width="25.0dip" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/ok" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="13.0sp" android:textColor="#ffffffff" android:gravity="left" android:id="@id/welcomeAgreeTosText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="@string/agreeTos" android:textAllCaps="false" />
            <TextView android:textSize="12.0sp" android:textColor="@color/blue" android:gravity="left" android:id="@id/welcomeShowTos" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="55.0dip" android:text="@string/readTos" android:lineSpacingExtra="1.0dip" android:onClick="showTOS" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>